test/compiler_errors/bogus-attribute-error.lzx
<!-- flag a bogus attribute name-->

<canvas width="300" height="200" bgcolor="red"> 
    <window title="Window 1" x="10" y="10" width="200" height="200" >
        <view>
    <text>This is some
text with a couple
of linebreaks in it.
</text>
        </view>
    </window>

   <class name="mywindow">
      <attribute name="bgcolor" value="#FFFFFF" type="color" />

      <attribute name="fluffy" value="birdie" type="string" />
      <text>Basewindow Text</text>
   </class>

   <mywindow bgcolor="yellow" boogaboogah="'bogus_attribute'" fluffy="parrot food">
   </mywindow>

   <view blah="17"/>
          <handler name="oninit" method="_doCheckConfig"/>

</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2008 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
